added random image for the first dice

--- a/DICE/index.html
+++ b/DICE/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./CSS/style.css">
     <title>Dice</title>
 </head>
 <body>
+    <div class="wrapper">
+        <h1></h1>
+
+        <div class="dice-area">
+            <div class="player">User</div>
+            <img />
+        </div>
+
+        <div class="dice-area">
+            <div class="player">Computer</div>
+            <img />
+        </div>
+    </div>
+
     <script src="./JS/script.js"></script>
 </body>
 </html>
