--- a/DICE/index.html
+++ b/DICE/index.html
@@ -12,7 +12,7 @@
         <h1></h1>
 
         <div class="dice-area">
-            <div class="player">User</div>
+            <div class="player">You</div>
             <img />
         </div>
 
