added style to "mail" ex. and removed all  'alert'

--- a/MAIL/index.html
+++ b/MAIL/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./CSS/style.css">
     <title>verify email</title>
 </head>
 <body>
-    <input id="userMail" type="text" placeholder="enter your email">
-    <button>Check</button>
+    <div class="wrapper">
+        <h1>Check if you are on the list</h1>
+        <input id="userMail" type="text" placeholder="enter your email" class="no-outline">
+        <button class="btn">Check</button>
+        <div class="result"></div>
+    </div>
+   
     <script src="./JS/script.js"></script>
 </body>
 </html>
